src/stylesheet.css
/* ... */
main {
  position: relative;
  font-family: "CoreSans", Tahoma, Geneva, Verdana, sans-serif;
  width: 100%;
  max-width: var(--content-width);
}

@keyframes animLogoContainer {
  0% {
    opacity: 1;
    width: 15rem;
    height: 15rem;
    background-color: rgba(255, 255, 255, 0);
    box-shadow: 0 0 0 rgba(0,0,0,0);
  }

  33% {
    opacity: 1;
    width: 15rem;
    height: 15rem;
    background-color: #FFF;
    box-shadow: 0 0 0 rgba(0,0,0,0);
  }

  50% {
    opacity: 1;
    width: 100%;
    height: 15rem;
    background-color: #FFF;
    box-shadow: 0 0 0 rgba(0,0,0,0);
  }

  66% {
    opacity: 1;
    top: 50%;
    width: 100%;
    height: 100%;
    background-color: var(--section-background);
    box-shadow: 0 5px 10px rgba(0,0,0,0.5);
  }

  100% {
    opacity: 0;
    top: 50%;
    width: 100%;
    height: 100%;
    background-color: var(--section-background);
    box-shadow: 0 5px 10px rgba(0,0,0,0.5);
  }
}

@keyframes animLogo {
  0% {
    opacity: 0;
  }

  30% {
    opacity: 1
  }

  97% {
    opacity: 1;
  }

  98% {
    opacity: 0;
  }

  100% {
    opacity: 0;
  }
}

@keyframes animMain {
  from {
    opacity: 0;
  }

  to {
    opacity: 1;
  }
}

#content {
  opacity: 0;
  animation-name: animMain;
  animation-timing-function: cubic-bezier(0,.65,.5,1);
  animation-delay: calc(3000ms * var(--anim-duration) + var(--anim-delay));
  animation-fill-mode: both;
  animation-duration: calc(1000ms * var(--anim-duration));
}

#content :is(header, section, footer) {
  background-color: var(--section-background);
  color: var(--text);
  box-sizing: border-box;
  display: flex;
  flex-direction: column;
  padding: var(--se-padding);
  gap: var(--se-padding);
  contain: content;
}

#content > * {
  position: relative;
  transform: translateX(-50%);
  left: 50%;
  border-radius: 0.75rem;
  box-shadow: 0 5px 10px rgba(0,0,0,0.5);
}

#content > :not(:last-child) {
  margin-bottom: var(--se-gap);
}

#logoAnim {
  width: 15rem;
  height: 15rem;
  top: 0px;
  left: 50%;
  transform: translate(-50%, -50%);
  background-color: rgba(255, 255, 255, 0);
  opacity: 1;

  animation-name: animLogoContainer;
  animation-timing-function: cubic-bezier(0,.65,.5,1);
  animation-delay: calc((1000ms * var(--anim-duration)) + var(--anim-delay));
  animation-fill-mode: both;
  animation-duration: calc(3000ms * var(--anim-duration));
  
  position: absolute;
  border-radius: 0.75rem;
  overflow: hidden;
}

#logoAnim > * {
  opacity: 0;
  animation-name: animLogo;
  animation-timing-function: cubic-bezier(0,.65,.5,1);
  animation-delay: var(--anim-delay);
  animation-fill-mode: both;
  animation-duration: calc(2s * var(--anim-duration));

  width: 100%;
  height: 100%;
  object-fit: contain;
}

h1, h2, h3, h4, h5 {
  font-weight: bold;
  text-align: center;
  margin: 0;
}

h1 {
  font-size: 40px;
}

h2 {
  font-size: 26px;
}

h3 {
  margin-top: 0.75em;
}

p {
  text-align: center;
  margin-top: 0;
  margin-bottom: 1em;
}

p, ul, table, time {
  font-weight: normal;
  font-size: 17px;
  color: var(--text-2);
}

a {
  color: var(--focus-outline);
  transition: all 250ms cubic-bezier(0,.65,.5,1);
  font-weight: bold;
  outline: 10px solid transparent;
  outline-offset: 10px;
  border-radius: 0.1em;
}

a:hover {
  color: var(--text);
}

a:focus, a:focus-visible {
  color: var(--text);
  outline: 3px solid var(--focus-outline);
  outline-offset: 3px;
}

ul {
  margin: 0 2em;
  padding: 0;
  margin-top: 0;
}

ul.no-bullet {
  list-style: none;
}

li:not(:first-of-type) {
  margin-top: 1em;
  text-align: justify;
}

em {
  color: var(--text-2-em);
  font-weight: bold;
  font-style: oblique 10deg;
}

table {
  table-layout: fixed;
  width: 100%;
  border-collapse: collapse;
  border-radius: 0.25rem;
  border-style: hidden;
  box-shadow: 0 0 0 2px rgba(0,0,0,0.5);
}

td, th {
  text-align: center;
  border: 2px solid rgba(0,0,0,0.5);
  padding: 1em;
}

th {
  font-size: 28px;
  background-color: rgba(0,0,0,0.1);
}

/* collapsible sections */

#collapsibles {
  /*
  transition-delay is done via collapsible-sections.ts
  cus im not sure how else to keep it at a certain value
  when changing which panels are shown, as opposed to
  opening or closing them.
  */
  transition-property: width, height, margin-bottom;
  overflow: clip;
  backdrop-filter: blur(5px) brightness(90%);
  -webkit-backdrop-filter: blur(5px) brightness(90%);
}

#collapsibles:not(.visible) {
  margin-bottom: 0;
}

#collapsibles, #collapsibles > *, #collapsibles > * > * {
  transition-timing-function: cubic-bezier(.75,0,.25,1);
  transition-duration: 250ms;
}

#collapsibles > * {
  transition-property: opacity;
  position: absolute;
  width: var(--content-width);
  max-width: var(--content-width);
}

#collapsibles > *.visible {
  transition-delay: 500ms;
}

#collapsibles > *:not(.visible) {
  transition-delay: 0ms;
  opacity: 0;
  user-select: none;
  pointer-events: none;
}

#collapsibles > *:not(.visible) * {
  user-select: none;
  pointer-events: none;
}

/* gallery */

#collapsibles > #gallery {
  width: calc(var(--content-width) * 2);
  max-width: calc(100vw - (var(--se-gap) * 2));
}

#gallery > p {
  max-width: var(--content-width);
  margin-left: auto;
  margin-right: auto;
}

#gallery-items {
  display: flex;
  width: 100%;
  justify-content: space-around;
  flex-wrap: wrap;
  gap: var(--se-padding);
}

.g-item {
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  width: calc(33% - (var(--se-padding) / 2));
  margin: 0;
}

@media screen and (max-width: 600px) {
  .g-item {
    width: 100%;
  }
}

@media screen and (min-width: 601px) and (max-width: 900px) {
  .g-item {
    width: calc(50% - (var(--se-padding) / 2));
  }
}

.g-img-container {
  display: flex;
  align-items: center;
  justify-content: center;
  min-height: 0;
  min-width: 0;
  aspect-ratio: 1 / 1;
}
/* ... */

